--- a/app/views/account/register.html.erb
+++ b/app/views/account/register.html.erb
@@ -1,10 +1,9 @@
 <h2><%=l(:label_register)%> <%=link_to l(:label_login_with_open_id_option), signin_url if Setting.openid? %></h2>
 
-<% form_tag({:action => 'register'}, :class => "tabular") do %>
-<%= error_messages_for 'user' %>
+<%= form_tag({:action => 'register'}, :class => "tabular") do %>
+<%= error_messages_for @user %>
 
 <div class="box">
-<!--[form:user]-->
 <% if @user.auth_source_id.nil? %>
 <p><label for="user_login"><%=l(:field_login)%> <span class="required">*</span></label>
 <%= text_field 'user', 'login', :size => 25 %></p>
@@ -37,7 +36,6 @@
 <% @user.custom_field_values.select {|v| v.editable? || v.required?}.each do |value| %>
 	<p><%= custom_field_tag_with_label :user, value %></p>
 <% end %>
-<!--[eoform:user]-->
 </div>
 
 <%= submit_tag l(:button_submit) %>
