--- a/app/views/projects/settings_repository.html.erb
+++ b/app/views/projects/settings_repository.html.erb
@@ -1,4 +1,5 @@
-<%= remote_form_for :repository, @repository,
+<%= form_for :repository, @repository,
+                   :remote => true,
                    :url => { :controller => 'repositories', :action => 'edit', :id => @project },
                    :builder => TabularFormBuilder,
                    :lang => current_language do |f| %>
