--- a/app/views/projects/settings/_repository.html.erb
+++ b/app/views/projects/settings/_repository.html.erb
@@ -1,5 +1,6 @@
-<%= remote_form_for :repository, @repository,
+<%= form_for :repository, @repository,
                    :url => { :controller => 'repositories', :action => 'edit', :id => @project },
+                   :remote => true,
                    :builder => TabularFormBuilder,
                    :lang => current_language do |f| %>
 
