--- a/app/views/projects/settings_wiki.html.erb
+++ b/app/views/projects/settings_wiki.html.erb
@@ -1,5 +1,6 @@
-<%= remote_form_for :wiki, @wiki,
+<%= form_for :wiki, @wiki,
                    :url => { :controller => 'wikis', :action => 'edit', :id => @project },
+                   :remote => true,
                    :builder => TabularFormBuilder,
                    :lang => current_language do |f| %>
 
