--- a/app/views/settings/_issues.rhtml
+++ b/app/views/settings/_issues.rhtml
@@ -16,7 +16,7 @@
 
 <fieldset class="box settings"><legend><%= l(:setting_issue_list_default_columns) %></legend>
 <%= setting_multiselect(:issue_list_default_columns,
-        Query.new.available_columns.collect {|c| [c.caption, c.name.to_s]}, :label => false) %>
+        IssueQuery.new.available_columns.collect {|c| [c.caption, c.name.to_s]}, :label => false) %>
 </fieldset>
 
 <%= submit_tag l(:button_save) %>
