--- a/app/views/issues/index.rhtml
+++ b/app/views/issues/index.rhtml
@@ -31,7 +31,9 @@
     		<table>
     			<tr>
     				<td><%= l(:field_column_names) %></td>
-						<td><%= render :partial => 'queries/columns', :locals => {:query => @query} %></td>
+
+						<%= query_columns %>
+            
 					</tr>
 					<tr>
 						<td><label for='group_by'><%= l(:field_group_by) %></label></td>
