Prepare for aaq integration.

--- a/app/views/gantts/show.html.erb
+++ b/app/views/gantts/show.html.erb
@@ -6,7 +6,7 @@
 <fieldset id="filters" class="collapsible <%= @query.new_record? ? "" : "collapsed" %>">
   <legend onclick="toggleFieldset(this);"><%= l(:label_filter_plural) %></legend>
 	<div style="<%= @query.new_record? ? "" : "display: none;" %>">
-    <%= render :partial => 'queries/filters', :locals => {:query => @query} %>
+    <%= query_filters @query %>
   </div>
 </fieldset>
 
