--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -5,7 +5,7 @@
 <fieldset id="filters" class="collapsible <%= @query.new_record? ? "" : "collapsed" %>">
   <legend onclick="toggleFieldset(this);"><%= l(:label_filter_plural) %></legend>
   <div style="<%= @query.new_record? ? "" : "display: none;" %>">
-    <%= query_filters @query %>
+    <%= render :partial => 'queries/filters', :locals => {:query => @query} %>
   </div>
 </fieldset>
 
