--- a/app/views/queries/_form.rhtml
+++ b/app/views/queries/_form.rhtml
@@ -33,7 +33,7 @@
       :onclick => 'if (this.checked) {Element.hide("columns")} else {Element.show("columns")}' %></p>
 
 <p><label for="query_group_by"><%= l(:field_group_by) %></label>
-<%= select 'query', 'group_by', @query.groupable_columns.collect {|c| [@query.column_label_for(c), c.to_s]}, :include_blank => true %></p>
+<%= select 'query', 'group_by', @query.groupable_columns.collect {|c| [c.caption, c.name.to_s]}, :include_blank => true %></p>
 </div>
 
 <fieldset><legend><%= l(:label_filter_plural) %></legend>
