--- a/app/views/settings/_issues.rhtml
+++ b/app/views/settings/_issues.rhtml
@@ -16,7 +16,7 @@
 
 <fieldset class="box settings"><legend><%= l(:setting_issue_list_default_columns) %></legend>
 <%= setting_multiselect(:issue_list_default_columns,
-        IssueQuery.new.available_columns.collect { |n, c| [c[:label], n.to_s] }, :label => false) %>
+        (q = IssueQuery.new).available_columns.map { |n, c| [q.column_label_for(n), n.to_s] }, :label => false) %>
 </fieldset>
 
 <%= submit_tag l(:button_save) %>
