--- a/app/views/queries/_form.rhtml
+++ b/app/views/queries/_form.rhtml
@@ -33,27 +33,20 @@
       :onclick => 'if (this.checked) {Element.hide("columns")} else {Element.show("columns")}' %></p>
 
 <p><label for="query_group_by"><%= l(:field_group_by) %></label>
-<%= select 'query', 'group_by', @query.groupable_columns.collect {|c| [c.caption, c.name.to_s]}, :include_blank => true %></p>
+<%= select 'query', 'group_by', query_group_by_options(@query), :include_blank => true %></p>
 </div>
 
 <fieldset><legend><%= l(:label_filter_plural) %></legend>
-<%= render :partial => 'queries/filters', :locals => {:query => query}%>
+<%= render :partial => 'queries/filters', :locals => {:query => @query}%>
 </fieldset>
 
 <fieldset><legend><%= l(:label_sort) %></legend>
-<% 3.times do |i| %>
-<%= i+1 %>:
-<%= label_tag "query_sort_criteria_attribute_" + i.to_s, l(:description_query_sort_criteria_attribute), :class => "hidden-for-sighted" %>
-<%= select_tag("query[sort_criteria][#{i}][]", options_for_select([[]] + query.available_columns.select(&:sortable?).collect {|column| [column.caption, column.name.to_s]}, @query.sort_criteria_key(i)), :id => "query_sort_criteria_attribute_" + i.to_s)%>
-<%= label_tag "query_sort_criteria_direction_" + i.to_s, l(:description_query_sort_criteria_direction), :class => "hidden-for-sighted" %>
-<%= select_tag("query[sort_criteria][#{i}][]", options_for_select([[], [l(:label_ascending), 'asc'], [l(:label_descending), 'desc']], @query.sort_criteria_order(i)), :id => "query_sort_criteria_direction_" + i.to_s) %>
-<br />
-<% end %>
+<%= query_sort_criteria @query %>
 </fieldset>
 
 <% content_tag 'fieldset', :id => 'columns', :style => (query.has_default_columns? ? 'display:none;' : nil) do %>
 <legend><%= l(:field_column_names) %></legend>
-<%= render :partial => 'queries/columns', :locals => {:query => query}%>
+<%= render :partial => 'queries/columns', :locals => {:query => @query}%>
 <% end %>
 
 </div>
