--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -96,7 +96,7 @@
     </div>
     </div>
     <div id="breadcrumb">
-      <%= page_header_title %>
+      <%= page_header_title.html_safe %>
     </div>
   </div>
 
